[package]
name = "bellman-circuit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ff = "0.12"
group = "0.12"
pairing = "0.22"
bls12_381 = "0.7.0"
hex="0.4.3"
bellman = "0.13.1"
rand = "0.8"
rand_xorshift = "0.3"
