[package]
name = "bls-pairing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ff = "0.12"
group = "0.12"
#pairing = "0.22"
bls12_381 = "0.7.0"
hex="0.4.3"
rand_core="0.6.3"

[dev-dependencies]
criterion = "0.3.2"
blstrs = { version = "0.6.0", features = ["__private_bench"] }
group = { version = "0.12", features = ["tests"] }
pairing_lib = { version = "0.22", package = "pairing" }
subtle = "2.2.1"

byte-slice-cast = "1.0.0"

rand_xorshift = "0.3.0"
serde_json = "1.0.57"
hex = "0.4.2"

[[bench]]
name = "bls12-381-pairing"
harness = false

[[bench]]
name = "blstrs-pairing"
harness = false
