[package]
name = "ff-group-polynomial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ff = "0.12"
bls12_381 = "0.7.0"

[dev-dependencies]
criterion = "0.3.2"

[[bench]]
name = "ffbench"
harness = false